# SocketsLib

./: .gitignore  CMakeLists.txt
Utils/: CMakeLists.txt  ClientUtility.c  GetAddrInfo.c  Practical.c  ServerUtility.c
Utils/encoding/: BruteForceCoding.c
Utils/include/: ClientUtility.h  GetAddrInfo.h  Practical.h  ServerUtility.h
Utils/include/encoding/: BruteForceCoding.h
Voting/: CMakeLists.txt  DelimFramer.c  LengthFramer.c  VoteEncodingBin.c  VoteEncodingText.c  voting_client.c  voting_server.c
Voting/utils/: Framer.h  VoteEncoding.h  VoteProtocol.h
echo/: CMakeLists.txt  echo_client.c  echo_server.c  echo_utils.h
